Update frontend, add on feature export csv file

--- a/popup.html
+++ b/popup.html
@@ -39,13 +39,16 @@
 	<h2>Note</h2>
 		<p>
 			Time: <output id="time_note"></output></br>
-			Level: <output id="level"></output></br>
 			New note: <textarea  id="note_input" name='inpute note'></textarea >
 			<button id="button">SAVE</button>
-			<button id="incr_lvl">+level</button>
-			<button id="decre_lvl">-level</button>
 			<button id="close_win">close</button>
 			<button id="stop_background">stop</button>
+			<button id="export_csv">export csv</button>
+			<select id="level">
+				<option value="0">level_0</option>
+				<option value="1">level_1</option>
+				<option value="2">level_2</option>
+			</select>
 		</p>
 	<script src="popup.js"></script>
   </body>
