update stop/start by icon click, display history list, config timer by input, enter+shift save, remove stop close button

--- a/popup.html
+++ b/popup.html
@@ -38,17 +38,16 @@
 	<h2>Note</h2>
 		<p>
 			Time: <output id="time_note"></output></br>
-			New note: <textarea  id="note_input" name='inpute note'></textarea >
-			<button id="update">UPDATE</button>
-			<button id="close_win">close</button>
-			<button id="stop_background">stop</button>
-			<button id="export_csv">export csv</button>
-			<button id="export_text">export text</button>
+			Timer Value(Mins): <input id="timer" value=5 size=2></input>
+			<textarea  id="note_input" name='inpute note' rows="3" cols="30"></textarea >
+
 			<select id="level">
 				<option value=0>level_0</option>
 				<option value=1>level_1</option>
 				<option value=2>level_2</option>
 			</select>
+			<button id="export_csv">export csv</button>
+			<button id="export_text">export text</button>		
 		</p>
 	<script src="popup.js"></script>
   </body>
