--- a/popup.html
+++ b/popup.html
@@ -40,6 +40,7 @@
 			Time: <output id="time_note"></output></br>
 			Timer Value(Mins): <input id="timer" value=5 size=2></input>
 			<textarea  id="note_input" name='inpute note' rows="3" cols="30"></textarea >
+			<output hidden id="date"></output></br>
 
 			<select id="level">
 				<option value=0>level_0</option>
