update to suppot timer reset value when user input 0 or empty

--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,7 @@
 	<h2>Note</h2>
 		<p>
 			Time: <output id="time_note"></output></br>
-			Timer Value(Mins): <input id="timer" value=5 size=2></input>
+			Timer Value(Mins): <input id="timer" size=2></input>
 			<textarea  id="note_input" name='inpute note' rows="3" cols="30"></textarea >
 			<output hidden id="date"></output></br>
 
