update level display, update export file name

--- a/popup.html
+++ b/popup.html
@@ -43,9 +43,9 @@
 			<output hidden id="date"></output></br>
 
 			<select id="level">
-				<option value=0>level_0</option>
-				<option value=1>level_1</option>
-				<option value=2>level_2</option>
+				<option value=0>Level 0</option>
+				<option value=1>Level 1</option>
+				<option value=2>Level 2</option>
 			</select>
 			<button id="export_csv">export csv</button>
 			<button id="export_text">export text</button>		
