push note to google spreadsheet

--- a/popup.html
+++ b/popup.html
@@ -48,8 +48,10 @@
 				<option value=2>Level 2</option>
 			</select>
 			<button id="export_csv">export csv</button>
-			<button id="export_text">export text</button>		
+			<button id="export_text">export text</button>
+			<button id="write_tempo">write tempo</button>
 		</p>
+		<p id="info"></p>
 	<script src="popup.js"></script>
   </body>
   </body>
