--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,9 @@
 		<p>
 			Time: <output id="time_note"></output></br>
 			Timer Value(Mins): <input id="timer" size=2></input>
-			<textarea  id="note_input" name='inpute note' rows="3" cols="30"></textarea >
+			<textarea  id="note_input" name='inpute note' rows="3" cols="30"></textarea ><br/>
+			Outcomes (vd: view all messages):
+			<textarea  id="outcome_input" name='inputeoutcome note' rows="3" cols="30"></textarea >
 			<output hidden id="date"></output></br>
 
 			<select id="level">
