fix popup alway-on-top

--- a/popup.html
+++ b/popup.html
@@ -38,9 +38,9 @@
 	<h2>Note</h2>
 		<p>
 			Time: <output id="time_note"></output></br>
-			Timer Value(Mins): <input id="timer" size=2></input>
+			Timer Value(Mins): <input id="timer" size=2></input><br>
 			<textarea  id="note_input" name='inpute note' rows="3" cols="30"></textarea ><br/>
-			Outcomes (vd: view all messages):
+			Outcomes (vd: view all messages):<br>
 			<textarea  id="outcome_input" name='inputeoutcome note' rows="3" cols="30"></textarea >
 			<output hidden id="date"></output></br>
 			<button id="export_csv">export csv</button>
