update email label

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Tempo Note 5000</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
@@ -33,6 +33,7 @@
   </head>
   
   <body>
+  	<label id="email"></label>
 	<h1>History</h1>
 		<textarea id="history_note" rows="5" cols="30" disabled></textarea></br>
 	<h2>Note</h2>
