autofocus when open keep 100 notes in history

--- a/popup.html
+++ b/popup.html
@@ -41,7 +41,7 @@
 			Time: <output id="time_note"></output></br>
 			Timer Value(Mins): <input id="timer" size=2></input><br>
 			Outcomes (vd: view all messages):<br>
-			<textarea  id="outcome_input" name='inputeoutcome note' rows="3" cols="30"></textarea ><br>
+			<textarea  id="outcome_input" name='inputeoutcome note' rows="3" cols="30" autofocus></textarea ><br>
 			Next activity:<br>
 			<textarea id="note_input" name='inpute note' rows="3" cols="30"></textarea ><br/>
 			<output hidden id="date"></output></br>
